tests/NormalTests/paczka1/fuzzy1/51332718.err
Error in line 3: mIPN A157 5,5
Error in line 6: aDemrkltt A702 271,3
Error in line 12: aDemrkltt A157 4,9
Error in line 16: UyH3hCC S193 2,1
Error in line 21: S193 A409 90,2
Error in line 23: S193 A702 71,9
Error in line 22: UyH3hCC A702 62,3
Error in line 32: UyH3hCC A157 54,3
Error in line 30: aDemrkltt A409 28,8
